<resources>
    <string name="app_name">Notess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="note">Spill your thoughts here…</string>
    <string name="title">Title</string>
    <string name="image">image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris\n        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus\n        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad\n        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend\n        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,\n        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\\n\\n\n        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus\n        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed\n        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada\n        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,\n        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor\n        bibendum, vel congue leo egestas.\\n\\n\n        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit\n        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,\n        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer\n        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at\n        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,\n        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque\n        est.\\n\\n\n        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.\n        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui\n        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In\n        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,\n        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra\n        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a\n        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus\n        convallis.\\n\\n\n        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et\n        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa\n        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,\n        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper\n        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus\n        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus\n        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.</string>
    <string name="archive">Archive</string>
    <string name="save_one">Save</string>
    <string name="delete_one">Delete</string>
    <string name="your_archived_notes_appear_here">Your archived notes appear here</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="unarchive">Unarchive</string>
    <string name="restore">Restore</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="web_client_id">268067917979-l377tff12vcto0kba0bnir226vttr0nb.apps.googleusercontent.com</string>
    <string name="profile_icon">profile icon</string>
    <string name="account_center">Account Center</string>
</resources>