<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_unarchive"
        android:icon="@drawable/unarchive"
        android:title="@string/unarchive"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/trash"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore"
        android:title="@string/restore"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_delete_forever"
        android:icon="@drawable/delete_forever_24"
        android:title="@string/delete_forever"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/save_one"
        app:showAsAction="always"
        />

</menu>