<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNoteFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:backgroundTint="@color/cardBackgroundColor"
            android:elevation="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <EditText
                    android:id="@+id/note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/title"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/note_body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:gravity="start|top"
                    android:hint="@string/note"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_done"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>